Use bash wrapper to run and debug a server

--- a/integration/vscode/ada/package.json
+++ b/integration/vscode/ada/package.json
@@ -4,6 +4,7 @@
     "description": "A Language Server and Language Support for Ada for Visual Studio Code",
     "version": "0.0.1",
     "publisher": "reznikmm",
+    "license": "MIT",
     "repository": {
         "type": "git",
         "url": "https://github.com/reznikmm/ada-lsp"
@@ -14,10 +15,10 @@
     "categories": [
         "Languages"
     ],
-	"activationEvents": [
-		"onLanguage:ada"
-	],
-	"main": "./extension",
+    "activationEvents": [
+        "onLanguage:ada"
+    ],
+    "main": "./extension",
     "contributes": {
         "languages": [{
             "id": "ada",
@@ -30,23 +31,23 @@
             "scopeName": "source.ada",
             "path": "./syntaxes/ada.tmLanguage"
         }],
-		"configuration": {
-			"type": "object",
-			"title": "Ada configuration",
-			"properties": {
-				"ada.trace.server": {
-					"scope": "window",
-					"type": "string",
-					"enum": [
-						"off",
-						"messages",
-						"verbose"
-					],
-					"default": "off",
-					"description": "Traces the communication between VSCode and the language server."
-				}
-			}
-		}
+        "configuration": {
+            "type": "object",
+            "title": "Ada configuration",
+            "properties": {
+                "ada.trace.server": {
+                    "scope": "window",
+                    "type": "string",
+                    "enum": [
+                        "off",
+                        "messages",
+                        "verbose"
+                    ],
+                    "default": "off",
+                    "description": "Traces the communication between VSCode and the language server."
+                }
+            }
+        }
     },
     "devDependencies": {
         "@types/mocha": "^2.2.42",
@@ -54,11 +55,11 @@
         "eslint": "^4.6.1",
         "typescript": "^2.5.2"
     },
-	"scripts": {
-		"postinstall": "node ./node_modules/vscode/bin/install"
-	},
-	"dependencies": {
-		"vscode": "^1.1.5",
-		"vscode-languageclient": "^3.4.2"
-	}
+    "scripts": {
+        "postinstall": "node ./node_modules/vscode/bin/install"
+    },
+    "dependencies": {
+        "vscode": "^1.1.5",
+        "vscode-languageclient": "^3.4.2"
+    }
 }
