--- a/integration/vscode/ada/package.json
+++ b/integration/vscode/ada/package.json
@@ -42,6 +42,12 @@
                 "path": "./syntaxes/ada.tmLanguage"
             }
         ],
+        "snippets": [
+            {
+                "language": "ada",
+                "path": "./ada-snippets.json"
+            }
+        ],
         "configuration": [
             {
                 "type": "object",
