Describe building and demo scenario

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,4 @@
 {
-    "ada.project_file": "gnat/lsp_protocol.gpr"
+    "ada.project_file": "gnat/lsp_protocol.gpr",
+    "ada.trace.server": "verbose"
 }
